# news-letter

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: general.yml
.sqlx/: query-1e36f075c71ebdedb824549e78d078fdf24e261302b0862e9408a88647762e8d.json  query-263adf94e29282acbee41a32b11391a494fea09a744254c9aee6fee28a4126c9.json  query-75180fc3b32c398effb43ed91c228f9fbb8975505bf2795b77d127021b68fd31.json  query-917f40e762a049e7dac567154f02c2c7dc3cde9684db330f881a30c80aa78d90.json  query-965c194d734315069fc238d258a277fe5dc6bfae4a480e9f0c02f04262df5e82.json  query-dc056d00d11ed7b4b775c760fb9e41a574734a558e26b7340ee198e5aacb8d5f.json  query-ff1296c2e8502e397ec18d1039b709ca75da9c0c896186638e96054218869615.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20250419164435_create_subscriptions_table.sql  20250707152855_make_status_not_null_in_subscriptions.sql  20250707154602_create_subscription_token_table.sql  20250714135110_seed_user.sql  20250716165235_create_newsletter_issues_table.sql  20250716170406_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_clients.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  admin_newsletter.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
