[package]
name = "news-letter"
version = "0.1.0"
edition = "2021"

[lib]
# we could use any path here, but we are following the community convention
# we could specify a library name using the `name` field. If unspecified, 
# cargo will default to `package.name`, which is what we want
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at workspace feature
[[bin]]
path="src/main.rs"
name="news-letter"

[dependencies]
actix-web = "4"
reqwest = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = "0.15"
env_logger = "0.11"
log = "0.4.27"
tracing ={ version = "0.1", features = ["log"]}