[package]
name = "news-letter"
version = "0.1.0"
edition = "2021"

[lib]
# we could use any path here, but we are following the community convention
# we could specify a library name using the `name` field. If unspecified, 
# cargo will default to `package.name`, which is what we want
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at workspace feature
[[bin]]
path="src/main.rs"
name="news-letter"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = "0.15"
tracing ={ version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3" #book writer is author of this library
tracing-log="0.2"
once_cell = "1.21"
secrecy = {version = "0.10", features = ["serde"]}
tracing-actix-web = "0.7" #book writer is author of this library
serde-aux="4"
unicode-segmentation="1"
validator="0.20"
rand={version = "0.9", features = ["std_rng"]}
thiserror="2"
anyhow="1"
base64="0.22"
# Read this to know more https://cheatsheetseries.owasp.org/cheatsheets/Password_Storage_Cheat_Sheet.html
argon2 = {version = "0.5", features = ["std"]}
urlencoding="2"
htmlescape = "0.3"
hmac = {version = "0.12", features = ["std"]}
# sha2= "0.10"
# hex="0.4"
actix-web-flash-messages= {version = "0.5", features = ["cookies"]}      # book writer is the auther of this library
actix-session={version ="0.10", features = ["redis-session-rustls"]}
serde_json="1"



[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls", "cookies"]


[dev-dependencies]
claims = "0.8"
fake="4.3"
quickcheck ="1"
quickcheck_macros="1"
wiremock = "0.6"
linkify="0.10"
rand8 = { package = "rand", version = "0.8" }


